--- a/package.json
+++ b/package.json
@@ -1,36 +1,38 @@
 {
-  "name": "extract-stack",
-  "version": "1.0.0",
-  "description": "Extract the actual stack of an error",
-  "license": "MIT",
-  "repository": "sindresorhus/extract-stack",
-  "author": {
-    "name": "Sindre Sorhus",
-    "email": "sindresorhus@gmail.com",
-    "url": "sindresorhus.com"
-  },
-  "engines": {
-    "node": ">=4"
-  },
-  "scripts": {
-    "test": "xo && ava"
-  },
-  "files": [
-    "index.js"
-  ],
-  "keywords": [
-    "extract",
-    "stack",
-    "error",
-    "err",
-    "trace",
-    "traces",
-    "lines",
-    "parse",
-    "get"
-  ],
-  "devDependencies": {
-    "ava": "*",
-    "xo": "*"
-  }
+	"name": "extract-stack",
+	"version": "1.0.0",
+	"description": "Extract the actual stack of an error",
+	"license": "MIT",
+	"repository": "sindresorhus/extract-stack",
+	"author": {
+		"name": "Sindre Sorhus",
+		"email": "sindresorhus@gmail.com",
+		"url": "sindresorhus.com"
+	},
+	"engines": {
+		"node": ">=8"
+	},
+	"scripts": {
+		"test": "xo && ava && tsd"
+	},
+	"files": [
+		"index.js",
+		"index.d.ts"
+	],
+	"keywords": [
+		"extract",
+		"stack",
+		"error",
+		"err",
+		"trace",
+		"traces",
+		"lines",
+		"parse",
+		"get"
+	],
+	"devDependencies": {
+		"ava": "^1.4.1",
+		"tsd": "^0.7.2",
+		"xo": "^0.24.0"
+	}
 }
